--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "high performance",
     "http service"
   ],
+  "version": "v1.5.21",
   "homepage": "https://www.workerman.net",
   "license": "MIT",
   "description": "High performance HTTP Service Framework.",
